--- a/app/templates/optimize_video/index.html
+++ b/app/templates/optimize_video/index.html
@@ -86,6 +86,19 @@
                     </div>
                 </div>
 
+                <!-- My Shorts Section -->
+                <div class="my-videos-section" id="channelShortsSection" style="display: none;">
+                    <div class="section-header">
+                        <h3 class="section-title">
+                            <i class="ph ph-device-mobile"></i>
+                            My Shorts
+                        </h3>
+                    </div>
+                    <div id="myShortsGrid" class="videos-grid">
+                        <!-- Shorts will be populated here -->
+                    </div>
+                </div>
+
                 <!-- Optimization History -->
                 <div class="history-section">
                     <h3 class="section-title">
